# advent-of-code-2025

./: pyproject.toml
src/day1/app/: solution.py
src/day2/app/: solution.py
src/day3/app/: solution.py
src/day6/app/: solution.py
src/shared/: utils.py
tests/: test_day1.py  test_day2.py  test_day3.py
